apps/external-wordpress/deployment.yaml
---
## WordPress Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-wordpress
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-wordpress
  template:
    metadata:
      labels:
        app: external-wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:6.9.4-apache
        imagePullPolicy: IfNotPresent
      
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 750m
            memory: 768Mi
          requests:
            cpu: 250m
            memory: 256Mi
        volumeMounts:
        - mountPath: /var/www/html/wp-content
          name: external-wordpress-data
      volumes:
      - name: external-wordpress-data
        persistentVolumeClaim:
          claimName: external-wordpress-wordpress-data
